feat: add staging deployment support (EC2 + RDS)